--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="header__navbar hide-on-mobile-tablet">
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--sepherate">
-                            Vào cửa hàng trên ứng dụng F8-Shop
+                            Vào cửa hàng trên ứng dụng 
                             <div class="header__qr">
                                 <img src="./assets/img/QR_code.png" alt="QR code" class="header__qr-img">
                                 <div class="header__qr-apps">
@@ -57,30 +57,30 @@
                                 <ul class="header__notify-list">
                                     <li class="header__notify-item header__notify-item--viewed">
                                         <a href="" class="header__notify-link">
-                                            <img src="https://cdn.abphotos.link/photos/resized/200x120/1653708536-php4dvzf5.png" alt="" class="header__notify-img">
+                                            <img src="/assets/img/tải xuống.jpg" alt="" class="header__notify-img">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm Ohui chính hãng</span>
-                                                <span class="header__notify-description">Mô tả mỹ phẩm Ohui chính hãng</span>
+                                                <span class="header__notify-name">Sản phẩm đồng hồ quả quýt</span>
+                                                <span class="header__notify-description">Mô tả sản phẩm đồng hồ quả quýt</span>
                                             </div>
                                         </a>
                                     </li>
 
                                     <li class="header__notify-item">
                                         <a href="" class="header__notify-link">
-                                            <img src="https://cdn.abphotos.link/photos/resized/200x120/1653708536-php4dvzf5.png" alt="" class="header__notify-img">
+                                            <img src="/assets/img/dong_ho_treo_tuong_mat_troi.jpg" alt="" class="header__notify-img">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Xác thực chính hãng nguồn gốc các sản phẩm Ohui</span>
-                                                <span class="header__notify-description">Mô tả mỹ phẩm Ohui chính hãng</span>
+                                                <span class="header__notify-name">Sản phẩm đồng hồ treo tường mặt trời</span>
+                                                <span class="header__notify-description">Mô tả sản phẩm đồng hồ treo tường</span>
                                             </div>
                                         </a>
                                     </li>
                                     
                                     <li class="header__notify-item header__notify-item--viewed">
                                         <a href="" class="header__notify-link">
-                                            <img src="https://cdn.abphotos.link/photos/resized/200x120/1653708536-php4dvzf5.png" alt="" class="header__notify-img">
+                                            <img src="/assets/img/dong_ho_treo_tuong_silver.jpg" alt="" class="header__notify-img">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm Ohui chính hãng</span>
-                                                <span class="header__notify-description">Mô tả mỹ phẩm Ohui chính hãng</span>
+                                                <span class="header__notify-name">Sản phẩm đòng hồ treo tường Silver</span>
+                                                <span class="header__notify-description">Mô tả sản phẩm đồng hồ treo tường Silver</span>
                                             </div>
                                         </a>
                                     </li>
@@ -187,10 +187,10 @@
                                 <h4 class="header__cart-heading">Sản phẩm đã thêm</h4>
                                 <ul class="header__cart-list-item">
                                     <li class="header__cart-item">
-                                        <img src="./assets/img/Geat__driver.jpg" alt="" class="header__cart-img">
+                                        <img src="./assets/img/dong_ho_orient_star_RE.jpg" alt="" class="header__cart-img">
                                         <div class="header__cart-item-info">
                                             <div class="header__cart-item-head">
-                                                <h5 class="header__cart-item-name">Kamen Rider Great Driver</h5>
+                                                <h5 class="header__cart-item-name">Đồng hồ Orient-star-RE</h5>
                                                 <div class="header__cart-item-wrap">
                                                     <span class="header__cart-item-price">2.000.000đ</span>
                                                     <span class="header__cart-item-multiply">x</span>
@@ -206,10 +206,10 @@
                                         </div>
                                     </li>
                                     <li class="header__cart-item">
-                                        <img src="./assets/img/Grandzio_Watch.jpg" alt="" class="header__cart-img">
+                                        <img src="./assets/img/dong_ho_quả_quyt_thach_anh.jpg" alt="" class="header__cart-img">
                                         <div class="header__cart-item-info">
                                             <div class="header__cart-item-head">
-                                                <h5 class="header__cart-item-name">Kamen Rider Zio - Grand Zio Watch</h5>
+                                                <h5 class="header__cart-item-name">Đồng hồ quả quýt thạch anh</h5>
                                                 <div class="header__cart-item-wrap">
                                                     <span class="header__cart-item-price">2.000.000đ</span>
                                                     <span class="header__cart-item-multiply">x</span>
@@ -225,10 +225,10 @@
                                         </div>
                                     </li>
                                     <li class="header__cart-item">
-                                        <img src="./assets/img/zero-one_driver.jpg" alt="" class="header__cart-img">
+                                        <img src="./assets/img/images.jpg" alt="" class="header__cart-img">
                                         <div class="header__cart-item-info">
                                             <div class="header__cart-item-head">
-                                                <h5 class="header__cart-item-name">Kamen rider Zero-One Driver</h5>
+                                                <h5 class="header__cart-item-name">Đồng hồ Rolex</h5>
                                                 <div class="header__cart-item-wrap">
                                                     <span class="header__cart-item-price">2.000.000đ</span>
                                                     <span class="header__cart-item-multiply">x</span>
